# zapp

./: .env  Cargo.toml
migrations/2020-10-13-212331_create_person/: down.sql  up.sql
migrations/2020-10-14-004820_add_title/: down.sql  up.sql
src/: main.rs  models.rs  readme.md  schema.rs
src/data/: person.rs
src/web/: api.rs
