[package]
name = "zapp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.1.0"
actix-rt = "1.1.1"
actix-cors = "0.4.1"
postgres = "0.17.5"
diesel = { version = "1.4.5", features = ["postgres", "uuidv07", "r2d2", "chrono"]}
chrono = { version = "0.4.10", features = ["serde"] }
dotenv = "0.15.0"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.59"
r2d2 = "0.8.9"